--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,15 @@
-<router-outlet></router-outlet>
+
+<div class="app-Wrapper">
+    <div class="top-Section">
+      <h1>19:00</h1>
+      <h2> 1401  asfand  14</h2>
+    </div>
+  
+    <div class="content-Section">
+        <router-outlet></router-outlet>
+    </div>
+  
+    <div class="button-Section">
+        
+    </div>
+  </div>
