--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-flow: column;
     height: 100%;
-    background-image: url(/assets/image/background.png);
+    background-image: url(/assets/img/small-wooden-house-scenic-winter-forest-starry-night-sky.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
