--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<div  class="app-Wrapper">
+    <div class="top-Section">
+      <app-clock></app-clock>
+    </div>
+      <div class="content-Section">
+        <router-outlet></router-outlet>
+      </div>
+      <div class="button-Section">
+        <app-tabs></app-tabs> 
+      </div>
+    </div>
