--- a/client/src/app/components/clock/clock.component.html
+++ b/client/src/app/components/clock/clock.component.html
@@ -1,4 +1,4 @@
     <div class="top-Section">
-      <h1>19:00</h1>
-      <h2> 1401  asfand  14</h2>
+      <p class="timeClock">{{hour}}:{{minute}}:{{second}}</p>
+      <p class="weekDay">{{day}}</p> 
     </div>
