--- a/client/src/app/components/vote/vote.component.html
+++ b/client/src/app/components/vote/vote.component.html
@@ -1,1 +1,8 @@
-<p>vote works!</p>
+<main>
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input type="email" matInput placeholder="your email.com">
+  </mat-form-field>
+  <!-- checkbox -->
+  
+</main>
