--- a/client/src/app/components/vote/vote.component.html
+++ b/client/src/app/components/vote/vote.component.html
@@ -1,8 +1,19 @@
 <main>
-  <mat-form-field>
+  <!-- <mat-form-field appearance="outline">
     <mat-label>Email</mat-label>
     <input type="email" matInput placeholder="your email.com">
-  </mat-form-field>
+  </mat-form-field> -->
+
   <!-- checkbox -->
-  
+  <mat-slide-toggle>
+    saturday
+  </mat-slide-toggle>
+  <mat-form-field >
+
+    <!-- time -->
+    <mat-label>Time</mat-label>
+    <mat-select [formControl]="toppings" multiple>
+      <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+    </mat-select>
+  </mat-form-field>
 </main>
