--- a/client/src/app/components/clock/clock.component.html
+++ b/client/src/app/components/clock/clock.component.html
@@ -1,4 +1,4 @@
     <div class="top-Section">
-      <p class="timeClock">{{hour}}:{{minute}}:{{second}}</p>
+      <p class="timeClock">{{hour}}:{{minute}}</p>
       <p class="weekDay">{{day | titlecase}}</p> 
     </div>
