complite client register

--- a/client/src/app/components/vote/vote.component.html
+++ b/client/src/app/components/vote/vote.component.html
@@ -1,19 +1,7 @@
 <main>
-  <!-- <mat-form-field appearance="outline">
-    <mat-label>Email</mat-label>
-    <input type="email" matInput placeholder="your email.com">
-  </mat-form-field> -->
+  <section>
+    <form>
 
-  <!-- checkbox -->
-  <mat-slide-toggle>
-    saturday
-  </mat-slide-toggle>
-  <mat-form-field >
-
-    <!-- time -->
-    <mat-label>Time</mat-label>
-    <mat-select [formControl]="toppings" multiple>
-      <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-    </mat-select>
-  </mat-form-field>
+    </form>
+  </section>
 </main>
