--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,1 +1,20 @@
-<p>register works!</p>
+<main>
+
+    <section>
+
+        <form [formGroup]="registerFg">
+            <mat-form-field>
+                <mat-label>Full Name</mat-label>
+                <input type="text" placeholder="Enter your Name" formControlName="nameCtrl" matInput>
+                <mat-hint>pless Enter your full name</mat-hint>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Email</mat-label>
+                <input type="email" placeholder="Enter your Email" formControlName="emailCtrl" matInput>
+                <mat-hint>Enter your email </mat-hint>
+            </mat-form-field>
+            <button (click)='registeVoter()' [disabled]="registerFg.invalid" mat-raised-button>Register</button>
+        </form>
+
+    </section>
+</main>
