bug dont show  register

--- a/client/src/app/components/tabs/tabs.component.html
+++ b/client/src/app/components/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 <div class="tabs">
-    <a routerLink="getVote" routerLinkActive="selected" class="tab bookmarks-Tab">
+    <a routerLink="/getVote" routerLinkActive="selected" class="tab bookmarks-Tab">
         <div class="tab-Title">
             <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="how_to_vote"></mat-icon>
         </div>
