--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,6 @@
-<div  class="app-Wrapper">
-    <div class="top-Section">
-      <app-clock></app-clock>
-    </div>
-      <div class="content-Section">
-        <router-outlet></router-outlet>
-      </div>
-      <div class="button-Section">
-        <app-tabs></app-tabs> 
-      </div>
-    </div>
+<div>
+  <app-topnavbor></app-topnavbor>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+</div>
