--- a/client/src/app/components/topnavbor/topnavbor.component.html
+++ b/client/src/app/components/topnavbor/topnavbor.component.html
@@ -7,7 +7,7 @@
             </a>
             <button mat-button [matMenuTriggerFor]="menu">Name User<mat-icon>expand_more</mat-icon></button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item>Profile</button>
+                <button routerLink="profile" mat-menu-item>Profile</button>
                 <button mat-menu-item>Vote</button>
                 <button mat-menu-item>Logout</button>
             </mat-menu>
