--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,5 +4,7 @@
     box-sizing: border-box;
 }
 body , main{
-    background-color: rgba(32, 32, 32, 1);
+    background-image: url(/assets/img/backgrondMain.svg);
+    background-size: auto;
+    background-repeat: no-repeat;
 }
