--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -2,16 +2,16 @@
     <section>
         <form [formGroup]="registerFg">
             <mat-form-field>
-                <input type="text" placeholder="Your name" matInput formControlName="nameCtel">
+                <input type="text" formControlName="nameCtrl" placeholder="Your name" matInput >
             </mat-form-field>
             <mat-form-field>
-                <input type="email" placeholder="Your email" matInput>
+                <input type="email" formControlName="emailCtrl" placeholder="Your email" matInput >
             </mat-form-field>
             <mat-form-field>
-                <input type="password" placeholder="Your password" matInput>
+                <input type="password" formControlName="passwordCtrl" placeholder="Your password" matInput>
             </mat-form-field>
             <mat-form-field>
-                <input type="password" placeholder="Confirm password" matInput>
+                <input type="password" formControlName="confirmPassCtrl" placeholder="Confirm password" matInput>
             </mat-form-field>
             <button (click)="submitFg()" [disabled]="">register</button>
         </form>
