fix bug login bug to navigator login to home

--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -4,3 +4,4 @@
     <input type="password" formControlName="passwordCtrl">
 </form>
 <button (click)="submitlogin()">login</button>
+<mat-error>{{globError}}</mat-error>
