--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -13,7 +13,7 @@
             <mat-form-field>
                 <input type="password" formControlName="confirmPassCtrl" placeholder="Confirm password" matInput>
             </mat-form-field>
-            <button (click)="submitFg()">register</button>
+            <button (click)="submitFg()" mat-button>register</button>
         </form>
     </section>
 </main>
