--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,7 +1,14 @@
-<p>login works!</p>
-<form [formGroup]="loginFg">
-    <input type="email" formControlName="emailctrl">
-    <input type="password" formControlName="passwordCtrl">
-</form>
-<button (click)="submitlogin()">login</button>
-<mat-error>{{globError}}</mat-error>
+<main>
+    <section>
+        <form [formGroup]="loginFg">
+            <mat-form-field>
+                <input type="email" formControlName="emailctrl" placeholder="Your email" matInput>
+            </mat-form-field>
+            <mat-form-field>
+                <input type="password" formControlName="passwordCtrl" placeholder="Your password" matInput>
+            </mat-form-field>
+        </form>
+        <button (click)="submitlogin()" mat-button>login</button>
+        <div>{{globShow}}</div>
+    </section>
+</main>
