--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -9,6 +9,6 @@
             </mat-form-field>
         </form>
         <button (click)="submitlogin()" mat-button>login</button>
-        <div>{{globShow}}</div>
+        <div>{{globShow}}:show</div>
     </section>
 </main>
