--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,216 @@
-<p>home works!</p>
+<main>
+    <section>
+        <div>
+            <!-- satday -->
+            <div class="day">
+                <label>Saturday</label>
+                <input type="checkbox" placeholder="saturday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+            <!-- sunday -->
+            <div class="day">
+                <label>Sunday</label>
+                <input type="checkbox" placeholder="Sunday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+            <!-- monday -->
+            <div class="day">
+                <label>Monday</label>
+                <input type="checkbox" placeholder="saturday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+            <!-- tuesday -->
+            <div class="day">
+                <label>tuesday</label>
+                <input type="checkbox" placeholder="tuesday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+            <!-- wednesday -->
+            <div class="day">
+                <label>wednesday</label>
+                <input type="checkbox" placeholder="wednesday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+             <!-- Thursday -->
+             <div class="day">
+                <label>Thursday</label>
+                <input type="checkbox" placeholder="Thursday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+            <!-- friyday -->
+            <div class="day">
+                <label>friyday</label>
+                <input type="checkbox" placeholder="friyday">
+            </div>
+            <div class="time">
+                <label>10-14</label>
+                <input type="checkbox" placeholder="10-14">
+
+                <label>11-15</label>
+                <input type="checkbox" placeholder="11-15">
+
+                <label>12-16</label>
+                <input type="checkbox" placeholder="12-16">
+
+                <label>13-17</label>
+                <input type="checkbox" placeholder="13-17">
+
+                <label>14-18</label>
+                <input type="checkbox" placeholder="14-18">
+
+                <label>15-19</label>
+                <input type="checkbox" placeholder="15-19">
+
+                <label>16-20</label>
+                <input type="checkbox" placeholder="16-20">
+
+                <label>17-21</label>
+                <input type="checkbox" placeholder="17-21">
+            </div>
+        </div>
+    </section>
+</main>
