--- a/client/src/app/components/main-singup/main-singup.component.html
+++ b/client/src/app/components/main-singup/main-singup.component.html
@@ -2,8 +2,10 @@
     <section>
         <div>
             <form>
+                <h2>register</h2>
+                <mat-label></mat-label>
                 <label>name</label>
-                <input type="name" mat-input>
+                <input type="name" matInput>
                 <label>Email</label>
                 <input type="email">
             </form>
