--- a/client/src/app/components/main-singup/main-singup.component.html
+++ b/client/src/app/components/main-singup/main-singup.component.html
@@ -1,7 +1,7 @@
 <main>
     <section>
         <div>
-        <form [formGroup]="singupFg">
+        <form [formGroup]="singupFg" (ngSubmit)="submitfg()">
                 <h2>register</h2>
                 <mat-form-field>
                     <mat-label>Full name</mat-label>
@@ -16,8 +16,8 @@
                     <mat-error>This field is required.</mat-error>
                 </mat-form-field>
 
+                <button  mat-raised-button color="primary" [disabled]="singupFg.invalid">Register</button>
             </form>
-            <button (click)="submitfg()">singup</button>
         </div>
     </section>
 </main>
