--- a/client/src/app/components/main-singup/main-singup.component.scss
+++ b/client/src/app/components/main-singup/main-singup.component.scss
@@ -37,32 +37,31 @@ main {
                 display: flex;
                 flex-direction: column;
                 line-height: 2.5rem;
+                margin-top: 1rem;
 
+                h2 {
+                    text-align: center;
+                    font-family: 'Times New Roman', Times, serif;
+                    font-size: 2rem;
+                    font-weight: 900;
+                    color: aliceblue;
 
-                mat-label{
+                }
+
+                mat-label {
                     color: white;
                     font-size: 1rem;
                 }
-                mat-hint{
-                    color: white;
-                    font-size: 0.7rem;  
-                }
-            }
-            button{
-                padding: 1rem;
-                margin-top: 1rem;
 
-                color: rgb(255, 255, 255);
-                text-shadow: 1px 0.5px rgb(165, 165, 165);
-                width: 100%;
-                background-color: rgba(240, 248, 255, 0);
-                border: none;
-                font-size: 1rem;
-            }
-            button:hover{
-                color: aliceblue;
-                font-size: 1.5rem;
-                transition: 200ms;
+                mat-hint {
+                    color: white;
+                    font-size: 0.7rem;
+                }
+
+                button{
+                    margin-top: 1rem;
+                    margin-bottom: 1rem;
+                }
             }
         }
     }
