--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <main>
     <section>
-        <h2>login</h2>
         <div>
+            <h2>Login</h2>
             <form [formGroup]="login" (ngSubmit)="btnLogin()">
                 <mat-form-field>
                     <mat-label>Email</mat-label>
