--- a/client/src/app/components/login/login.component.scss
+++ b/client/src/app/components/login/login.component.scss
@@ -1,3 +1,75 @@
-main{
-    padding: 1rem;
+main {
+    background-image: url(/assets/icons8-tick-480.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-color: rgba(32, 32, 32, 1);
+
+    min-width: 100%;
+    min-height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    section {
+
+        div {
+            background-color: rgba(30, 30, 30, 0.65);
+
+            border-radius: 1rem;
+
+            max-width: 60rem;
+            min-width: 30rem;
+            max-height: 60rem;
+            min-height: 10rem;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            H2{
+                color: aliceblue;
+
+                font-size: 2rem;
+                font-weight: 900;
+            }
+            form {
+                max-width: 50rem;
+                min-width: 20rem;
+                max-height: 50rem;
+                min-height: 10rem;
+                display: flex;
+                flex-direction: column;
+                line-height: 2.5rem;
+                margin-top: 1rem;
+
+                h2 {
+                    text-align: center;
+                    font-family: 'Times New Roman', Times, serif;
+                    font-size: 2rem;
+                    font-weight: 900;
+                    color: aliceblue;
+
+                }
+
+                mat-label {
+                    color: white;
+                    font-size: 1rem;
+                }
+
+                mat-hint {
+                    color: white;
+                    font-size: 0.7rem;
+                }
+
+                button {
+                    margin-top: 1rem;
+                    margin-bottom: 1rem;
+                    background: orangered;
+                }
+            }
+        }
+    }
 }
