--- a/client/src/app/components/vote/vote.component.html
+++ b/client/src/app/components/vote/vote.component.html
@@ -5,111 +5,112 @@
     <section>
         <div class="mainDiv">
             <h1>رای گیری روز و ساعت کلاس پیشرفته</h1>
-            <form>
+            <form [formGroup]="voteFg" (ngSubmit)="voteSubmit()">
                 <section class="day">
-                    <mat-checkbox>شنبه</mat-checkbox>
-                    <mat-icon  fontIcon="keyboard_backspace" class="icon"></mat-icon>
+                    <mat-checkbox formControlName="saturdayCtrl">شنبه</mat-checkbox>
+                    <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="saturday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="saturday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
                 <!-- یکشنبه -->
                 <section class="day">
-                    <mat-checkbox>یکشنبه</mat-checkbox>
+                    <mat-checkbox formControlName="sundayCtrl">یکشنبه</mat-checkbox>
                     <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="sunday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="sunday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
                 <!-- دوشنبه -->
                 <section class="day">
-                    <mat-checkbox>دوشنبه</mat-checkbox>
+                    <mat-checkbox formControlName="mondayCtrl">دوشنبه</mat-checkbox>
                     <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="monday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="monday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
                 <!-- سه شنبه -->
                 <section class="day">
-                    <mat-checkbox>سه شنبه </mat-checkbox>
+                    <mat-checkbox formControlName="tuesdayCtrl">سه شنبه </mat-checkbox>
                     <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="tuesday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
                 <!-- چهارشنبه-->
                 <section class="day">
-                    <mat-checkbox>چهارشنبه</mat-checkbox>
+                    <mat-checkbox formControlName="wednesdayCtrl">چهارشنبه</mat-checkbox>
                     <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="wednesday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
                 <!-- پنجشنبه-->
                 <section class="day">
-                    <mat-checkbox> پنجشنبه</mat-checkbox>
+                    <mat-checkbox formControlName="thursdayCtrl"> پنجشنبه</mat-checkbox>
                     <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="thursday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="thursday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
                 <!-- جمعه-->
                 <section class="day">
-                    <mat-checkbox> جمعه</mat-checkbox>
+                    <mat-checkbox formControlName="fridayCtrl"> جمعه</mat-checkbox>
                     <mat-icon fontIcon="keyboard_backspace" class="icon"></mat-icon>
                     <div class="time">
-                        <mat-checkbox>ساعت 10 - 14</mat-checkbox>
-                        <mat-checkbox>11 - 15 ساعت</mat-checkbox>
-                        <mat-checkbox>12 - 16 ساعت</mat-checkbox>
-                        <mat-checkbox>13 - 17 ساعت</mat-checkbox>
-                        <mat-checkbox>14 - 18 ساعت</mat-checkbox>
-                        <mat-checkbox>15 - 19 ساعت</mat-checkbox>
-                        <mat-checkbox>16 - 20 ساعت</mat-checkbox>
-                        <mat-checkbox>17 - 21 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday10To14Ctrl">ساعت 10 - 14</mat-checkbox>
+                        <mat-checkbox formControlName="friday11To15Ctrl">11 - 15 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday12To16Ctrl">12 - 16 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday13To17Ctrl">13 - 17 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday14To18Ctrl">14 - 18 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday15To19Ctrl">15 - 19 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday16To20Ctrl">16 - 20 ساعت</mat-checkbox>
+                        <mat-checkbox formControlName="friday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
+                <button type="submit" mat-raised-button [disabled]="voteFg.invalid">Submit</button>
             </form>
         </div>
 
