fix smal V in mongo & forEach for all-vote

--- a/client/src/app/components/all-vote/all-vote.component.html
+++ b/client/src/app/components/all-vote/all-vote.component.html
@@ -2,9 +2,9 @@
     <section>
         <h2>votes</h2>
         <table *ngIf="votes">
-            <td *ngFor="let vote of votes ; let i = index">شنبه  
+            <td>شنبه {{count}}
                 <tr>
-                    ساعت 10 تا 2{{vote}}
+                    ساعت 10 تا 2
                 </tr>
                 <tr>
                     ساعت 11 تا 3
@@ -54,9 +54,138 @@
                     ساعت 5 تا 9
                 </tr>
             </td>
+            <td>دوشنبه
+                <tr>
+                    ساعت 10 تا 2
+                </tr>
+                <tr>
+                    ساعت 11 تا 3
+                </tr>
+                <tr>
+                    ساعت 12 تا 4
+                </tr>
+                <tr>
+                    ساعت 1 تا 5
+                </tr>
+                <tr>
+                    ساعت 2 تا 6
+                </tr>
+                <tr>
+                    ساعت 3 تا 7
+                </tr>
+                <tr>
+                    ساعت 4 تا 8
+                </tr>
+                <tr>
+                    ساعت 5 تا 9
+                </tr>
+            </td>
+            <td>سه شنبه
+                <tr>
+                    ساعت 10 تا 2
+                </tr>
+                <tr>
+                    ساعت 11 تا 3
+                </tr>
+                <tr>
+                    ساعت 12 تا 4
+                </tr>
+                <tr>
+                    ساعت 1 تا 5
+                </tr>
+                <tr>
+                    ساعت 2 تا 6
+                </tr>
+                <tr>
+                    ساعت 3 تا 7
+                </tr>
+                <tr>
+                    ساعت 4 تا 8
+                </tr>
+                <tr>
+                    ساعت 5 تا 9
+                </tr>
+            </td>
+            <td>چهار شنبه
+                <tr>
+                    ساعت 10 تا 2
+                </tr>
+                <tr>
+                    ساعت 11 تا 3
+                </tr>
+                <tr>
+                    ساعت 12 تا 4
+                </tr>
+                <tr>
+                    ساعت 1 تا 5
+                </tr>
+                <tr>
+                    ساعت 2 تا 6
+                </tr>
+                <tr>
+                    ساعت 3 تا 7
+                </tr>
+                <tr>
+                    ساعت 4 تا 8
+                </tr>
+                <tr>
+                    ساعت 5 تا 9
+                </tr>
+            </td>
+            <td>پنجشنبه
+                <tr>
+                    ساعت 10 تا 2
+                </tr>
+                <tr>
+                    ساعت 11 تا 3
+                </tr>
+                <tr>
+                    ساعت 12 تا 4
+                </tr>
+                <tr>
+                    ساعت 1 تا 5
+                </tr>
+                <tr>
+                    ساعت 2 تا 6
+                </tr>
+                <tr>
+                    ساعت 3 تا 7
+                </tr>
+                <tr>
+                    ساعت 4 تا 8
+                </tr>
+                <tr>
+                    ساعت 5 تا 9
+                </tr>
+            </td>
+            <td>جمعه
+                <tr>
+                    ساعت 10 تا 2
+                </tr>
+                <tr>
+                    ساعت 11 تا 3
+                </tr>
+                <tr>
+                    ساعت 12 تا 4
+                </tr>
+                <tr>
+                    ساعت 1 تا 5
+                </tr>
+                <tr>
+                    ساعت 2 تا 6
+                </tr>
+                <tr>
+                    ساعت 3 تا 7
+                </tr>
+                <tr>
+                    ساعت 4 تا 8
+                </tr>
+                <tr>
+                    ساعت 5 تا 9
+                </tr>
+            </td>
         </table>
         <div>
-            <!-- <button (click)="showVotes()" mat-raised-button>Show voters</button> -->
         </div>
     </section>
 </main>
