--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -11,6 +11,7 @@
                 </mat-form-field>
                 <button type="submit" mat-raised-button [disabled]="loginFg.invalid">ورود</button>
             </form>
+            <button class="btnLoguot" routerLink="/singup" mat-button>ثبت نام</button>
         </div>
     </section>
 </main>
